[package]
name = "vscode-recents"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = [
    "cdylib",
] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11"
shellexpand = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
